--- a/output.css
+++ b/output.css
@@ -560,6 +560,14 @@ video {
   position: relative;
 }
 
+.-left-\[0px\] {
+  left: -0px;
+}
+
+.-left-\[770px\] {
+  left: -770px;
+}
+
 .bottom-0 {
   bottom: 0px;
 }
@@ -570,30 +578,6 @@ video {
 
 .top-0 {
   top: 0px;
-}
-
-.-left-\[640px\] {
-  left: -640px;
-}
-
-.-left-\[740px\] {
-  left: -740px;
-}
-
-.-left-\[750px\] {
-  left: -750px;
-}
-
-.-left-\[760px\] {
-  left: -760px;
-}
-
-.-left-\[0px\] {
-  left: -0px;
-}
-
-.-left-\[770px\] {
-  left: -770px;
 }
 
 .z-10 {
@@ -620,16 +604,6 @@ video {
 .my-10 {
   margin-top: 2.5rem;
   margin-bottom: 2.5rem;
-}
-
-.my-2 {
-  margin-top: 0.5rem;
-  margin-bottom: 0.5rem;
-}
-
-.my-2\.5 {
-  margin-top: 0.625rem;
-  margin-bottom: 0.625rem;
 }
 
 .block {
@@ -672,6 +646,10 @@ video {
   height: 100px;
 }
 
+.h-\[50px\] {
+  height: 50px;
+}
+
 .h-fit {
   height: -moz-fit-content;
   height: fit-content;
@@ -681,44 +659,16 @@ video {
   height: 100%;
 }
 
-.h-\[80px\] {
-  height: 80px;
-}
-
-.h-\[60px\] {
-  height: 60px;
-}
-
-.h-\[50px\] {
-  height: 50px;
-}
-
-.w-11 {
-  width: 2.75rem;
-}
-
 .w-\[100px\] {
   width: 100px;
 }
 
-.w-auto {
-  width: auto;
-}
-
-.w-full {
-  width: 100%;
-}
-
-.w-\[80px\] {
-  width: 80px;
-}
-
-.w-\[60px\] {
-  width: 60px;
-}
-
 .w-\[50px\] {
   width: 50px;
+}
+
+.w-auto {
+  width: auto;
 }
 
 .w-fit {
@@ -726,8 +676,16 @@ video {
   width: fit-content;
 }
 
+.w-full {
+  width: 100%;
+}
+
 .max-w-screen-2xl {
   max-width: 1536px;
+}
+
+.max-w-\[1920px\] {
+  max-width: 1920px;
 }
 
 .flex-shrink-0 {
@@ -778,6 +736,10 @@ video {
   justify-content: space-between;
 }
 
+.justify-around {
+  justify-content: space-around;
+}
+
 .justify-evenly {
   justify-content: space-evenly;
 }
@@ -792,10 +754,6 @@ video {
 
 .rounded-full {
   border-radius: 9999px;
-}
-
-.rounded-xl {
-  border-radius: 0.75rem;
 }
 
 .rounded-lg {
@@ -816,19 +774,14 @@ video {
   background-color: rgb(27 27 27 / var(--tw-bg-opacity));
 }
 
-.bg-red-300 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(252 165 165 / var(--tw-bg-opacity));
-}
-
-.bg-white {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
 .bg-main {
   --tw-bg-opacity: 1;
   background-color: rgb(235 235 235 / var(--tw-bg-opacity));
+}
+
+.bg-red-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(252 165 165 / var(--tw-bg-opacity));
 }
 
 .p-2 {
@@ -839,18 +792,14 @@ video {
   padding: 1.25rem;
 }
 
-.p-1 {
-  padding: 0.25rem;
+.px-1 {
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
 }
 
 .py-5 {
   padding-top: 1.25rem;
   padding-bottom: 1.25rem;
-}
-
-.px-1 {
-  padding-left: 0.25rem;
-  padding-right: 0.25rem;
 }
 
 .text-center {
@@ -883,12 +832,6 @@ video {
 
 .opacity-0 {
   opacity: 0;
-}
-
-.shadow-lg {
-  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .outline {
@@ -929,18 +872,6 @@ video {
   background: linear-gradient(145deg, #17efd8, #d722c7, #d9b012);
   background-size: 100%;
   background-position: center;
-}
-
-.hover\:scale-50:hover {
-  --tw-scale-x: .5;
-  --tw-scale-y: .5;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.hover\:scale-125:hover {
-  --tw-scale-x: 1.25;
-  --tw-scale-y: 1.25;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .hover\:scale-110:hover {
@@ -990,12 +921,6 @@ video {
   }
 }
 
-@media (min-width: 1024px) {
-  .lg\:left-0 {
-    left: 0px;
-  }
-}
-
 @media (min-width: 1280px) {
   .xl\:h-14 {
     height: 3.5rem;
@@ -1010,5 +935,27 @@ video {
 @media (min-width: 1536px) {
   .\32xl\:h-20 {
     height: 5rem;
+  }
+
+  .\32xl\:h-40 {
+    height: 10rem;
+  }
+
+  .\32xl\:h-32 {
+    height: 8rem;
+  }
+
+  .\32xl\:h-16 {
+    height: 4rem;
+  }
+
+  .\32xl\:text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
+
+  .\32xl\:text-3xl {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
   }
 }
