--- a/output.css
+++ b/output.css
@@ -634,6 +634,22 @@ video {
   top: 0px;
 }
 
+.-left-\[500px\] {
+  left: -500px;
+}
+
+.-left-\[40px\] {
+  left: -40px;
+}
+
+.-left-full {
+  left: -100%;
+}
+
+.-left-0 {
+  left: -0px;
+}
+
 .z-10 {
   z-index: 10;
 }
